fix locales texts

--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -69,12 +69,12 @@
   "settingsAddDomainToCodeInjectionLabel": { "message": "add to [code injection]" },
   "settingsAddDomainToWebsiteRulesLabel": { "message": "add to [website rules]" },
   "settingsEventDetectedTitle": { "message": "when a new JavaScript event is detected:" },
-  "settingsAddEventToDefaultTitle": { "message": "add to [default rules]:" },
+  "settingsAddEventToDefaultTitle": { "message": "add to [default rules]" },
   "settingsAddEventNoneLabel": { "message": "none" },
   "settingsAddEventCommonLabel": { "message": "common" },
   "settingsAddEventAllLabel": { "message": "all" },
   "settingsAddEventAlmostAllLabel": { "message": "almost all" },
-  "settingsAddEventToWebsiteTitle": { "message": "add to [website rules]:" },
+  "settingsAddEventToWebsiteTitle": { "message": "add to [website rules]" },
 
   "settingsNotRecommendedText": { "message": "not recommended" },
   "settingsDefinitelyNotRecommendedText": { "message": "definitely not recommended" },
