--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -69,12 +69,12 @@
   "settingsAddDomainToCodeInjectionLabel": { "message": "añadir en [inyecciones de código]" },
   "settingsAddDomainToWebsiteRulesLabel": { "message": "añadir en [reglas por sitio web]" },
   "settingsEventDetectedTitle": { "message": "cuando se detecta un nuevo evento JavaScript:" },
-  "settingsAddEventToDefaultTitle": { "message": "añadir en [reglas estándar]:" },
+  "settingsAddEventToDefaultTitle": { "message": "añadir en [reglas estándar]" },
   "settingsAddEventNoneLabel": { "message": "ningúno" },
   "settingsAddEventCommonLabel": { "message": "comunes" },
   "settingsAddEventAllLabel": { "message": "todos" },
   "settingsAddEventAlmostAllLabel": { "message": "casi todos" },
-  "settingsAddEventToWebsiteTitle": { "message": "añadir en [reglas por sitio web]:" },
+  "settingsAddEventToWebsiteTitle": { "message": "añadir en [reglas por sitio web]" },
 
   "settingsNotRecommendedText": { "message": "no recomendado" },
   "settingsDefinitelyNotRecommendedText": { "message": "definitivamente no recomendado" },
