--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -19,7 +19,7 @@
   "settingsCodeInjectionTitle": { "message": "injeção de códigos" },
   "settingsPopupTitle": { "message": "popup" },
   "settingsBadgeCounterTitle": { "message": "contador do ícone" },
-  "settingsAdvancedTitle": { "message": "advanced" },
+  "settingsAdvancedTitle": { "message": "avançado" },
   "settingsStoredDataLocalTitle": { "message": "dados locais" },
   "settingsStoredDataSyncTitle": { "message": "dados sincronizados" },
   "settingsReadMoreText": { "message": "leia mais sobre" },
@@ -80,8 +80,8 @@
   "settingsNotRecommendedText": { "message": "não recomendado" },
   "settingsDefinitelyNotRecommendedText": { "message": "definitivamente não recomendado" },
 
-  "settingsFilterResponseDataTitle": { "message": "use filterResponseData API (if supported)" },
-  "settingsInjectionTitle": { "message": "injection" },
+  "settingsFilterResponseDataTitle": { "message": "utilizar a API filterResponseData (se suportada)" },
+  "settingsInjectionTitle": { "message": "injeção" },
   "settingsReportsTitle": { "message": "relatórios" },
   "settingsIndexedDbMdnHref": { "message": "https://developer.mozilla.org/pt-BR/docs/Web/API/IndexedDB_API" },
   "settingsRecordsText": { "message": "registros" },
